--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,5 @@ include ':library_base'
 include ':library_network'
 include ':library_util'
 include ':library_common'
+include ':module_welcome'
+include ':library_widget'
