--- a/library_network/build.gradle
+++ b/library_network/build.gradle
@@ -1,6 +1,6 @@
 //library-network配置文件
 import com.knight.wanandroid.buildsrc.*
-apply from:'../base_config.gradle'
+apply from:'../base_library.gradle'
 
 android {
     buildTypes {
