--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     api Dependencies.GitHub.AutoService
     kapt Dependencies.GitHub.AutoServiceAnnotations
+
+    implementation Dependencies.GitHub.MMKV
+    implementation Dependencies.GitHub.Gson
 }
