--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.alibaba.arouter'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'android-aspectjx'
 
 
 android {
@@ -66,6 +67,16 @@ android {
                         ".apk"
             }
         }
+    }
+
+    aspectjx {
+        // 排除一些第三方库的包名（Gson、 LeakCanary 和 AOP 有冲突）
+        // exclude 'androidx', 'com.google', 'com.squareup', 'org.apache', 'com.alipay', 'com.taobao', 'versions.9'
+        // 只对以下包名做 AOP 处理
+        include 'com.knight.kotlin'
+        // 否则就会引发冲突，具体表现为：
+        // 编译不过去，报错：java.util.zip.ZipException：Cause: zip file is empty
+        // 编译能过去，但运行时报错：ClassNotFoundException: Didn't find class on path: DexPathList
     }
 
     compileOptions {
