--- a/library_util/build.gradle
+++ b/library_util/build.gradle
@@ -10,9 +10,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    api project(path: ':library_common')
-    api project(path: ':library_base')
-    api project(path: ':library_database')
+    implementation project(path: ':library_common')
+    implementation project(path: ':library_base')
+    implementation project(path: ':library_database')
     implementation Dependencies.JetPack.HiltCore
     kapt Dependencies.JetPack.HiltApt
     kapt Dependencies.JetPack.HiltAndroidx
