--- a/library_aop/build.gradle
+++ b/library_aop/build.gradle
@@ -1,4 +1,4 @@
-//library-network配置文件
+//library-aop配置文件
 import com.knight.wanandroid.buildsrc.*
 apply from:'../base_library.gradle'
 apply plugin: 'android-aspectjx'
