--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -45,4 +45,6 @@ dependencies {
 
     implementation Dependencies.GitHub.MMKV
     implementation Dependencies.GitHub.Gson
+
+    implementation Dependencies.GitHub.LoadSir
 }
