--- a/module_home/build.gradle
+++ b/module_home/build.gradle
@@ -8,5 +8,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation project(path: ':library_scan')
 }
