--- a/module_home/build.gradle
+++ b/module_home/build.gradle
@@ -9,4 +9,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':library_scan')
+    implementation Dependencies.GitHub.Banner
 }
