--- a/module_web/src/main/AndroidManifest.xml
+++ b/module_web/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity android:name=".activity.WebActivity" />
         <activity android:name=".activity.WebPreviewPhotoActivity"/>
+        <activity android:name=".activity.WebArticleActivity"/>
 
     </application>
 
