--- a/module_home/src/main/AndroidManifest.xml
+++ b/module_home/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.knight.kotlin.module_home">
 
     <application>
+        <activity android:name=".activity.HomeArticlesTabActivity"/>
     </application>
 
 </manifest>
