--- a/module_web/src/main/AndroidManifest.xml
+++ b/module_web/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         <activity android:name=".activity.WebActivity" />
         <activity android:name=".activity.WebPreviewPhotoActivity"/>
         <activity android:name=".activity.WebArticleActivity"/>
+        <activity android:name=".activity.WebTransitionActivity"/>
 
     </application>
 
