--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':library_aop'
 include ':library_permiss'
 include ':library_scan'
 include ':module_wechat'
+include ':library_biometric'
