--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation project(path:":module_project")
     implementation project(path:":module_square")
     implementation project(path:":module_web")
+    implementation project(path:":module_set")
     implementation Dependencies.JetPack.HiltCore
     kapt Dependencies.JetPack.HiltApt
     kapt Dependencies.JetPack.HiltAndroidx
