--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.knight.kotlin.module_set">
 
     <application>
-
+        <activity android:name=".activity.SetActivity"/>
     </application>
 
 </manifest>
