--- a/module_home/build.gradle
+++ b/module_home/build.gradle
@@ -9,5 +9,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':library_scan')
+    implementation project(path: ':library_biometric')
     implementation Dependencies.GitHub.Banner
 }
