--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -43,9 +43,10 @@ dependencies {
     api Dependencies.GitHub.AutoService
     kapt Dependencies.GitHub.AutoServiceAnnotations
 
+    debugApi Dependencies.GitHub.LeakCanary
+
     implementation Dependencies.GitHub.MMKV
     implementation Dependencies.GitHub.Gson
-
     implementation Dependencies.GitHub.LoadSir
 
 }
