--- a/module_square/src/main/AndroidManifest.xml
+++ b/module_square/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.knight.kotlin.module_square">
 
     <application>
-
+         <activity android:name=".activity.SquareShareArticleActivity"/>
     </application>
 
 </manifest>
