--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -47,6 +47,6 @@ dependencies {
 
     implementation Dependencies.GitHub.MMKV
     implementation Dependencies.GitHub.Gson
-    implementation Dependencies.GitHub.LoadSir
+    api Dependencies.GitHub.LoadSir
 
 }
