完成我的积分明细

--- a/module_mine/src/main/AndroidManifest.xml
+++ b/module_mine/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.CoinRankActivity"/>
         <activity android:name=".activity.OtherShareArticleActivity"/>
+        <activity android:name=".activity.MyCoinsActivity"/>
     </application>
 
 </manifest>
