完成我的收藏

--- a/module_mine/src/main/AndroidManifest.xml
+++ b/module_mine/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         <activity android:name=".activity.CoinRankActivity"/>
         <activity android:name=".activity.OtherShareArticleActivity"/>
         <activity android:name=".activity.MyCoinsActivity"/>
+        <activity android:name=".activity.MyCollectArticleActivity"/>
     </application>
 
 </manifest>
