完成深色模式切换

--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application>
         <activity android:name=".activity.SetActivity"/>
+        <activity android:name=".activity.DarkModeActivity"/>
     </application>
 
 </manifest>
