--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation Dependencies.GitHub.MMKV
     implementation Dependencies.GitHub.Gson
     api Dependencies.GitHub.LoadSir
+    implementation Dependencies.OtherUtils.Bugly
 
 }
