1.新增夜间模式

--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <application>
         <activity android:name=".activity.SetActivity"/>
         <activity android:name=".activity.DarkModeActivity"/>
+        <activity android:name=".activity.SelectLanguageActivity"/>
+        <activity android:name=".activity.AutoNightTimeActivity"/>
     </application>
 
 </manifest>
