--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':library_scan'
 include ':module_wechat'
 include ':library_biometric'
 include ':module_set'
+include ':module_utils'
+include ':module_course'
