1.完成字体大小改变

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,12 +44,12 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-<!--        &lt;!&ndash; 会使屏幕适配框架失效 让ContentProvider失效&ndash;&gt;-->
-<!--        <provider-->
-<!--            android:name="me.jessyan.autosize.InitProvider"-->
-<!--            android:authorities="${applicationId}.InitProvider"-->
-<!--            tools:node="remove"-->
-<!--            />-->
+        <!-- 会使屏幕适配框架失效 让ContentProvider失效 主要是为了适配字体大小 如果开启了屏幕适配 调整字体大小会失效-->
+        <provider
+            android:name="me.jessyan.autosize.InitProvider"
+            android:authorities="${applicationId}.InitProvider"
+            tools:node="remove"
+            />
     </application>
 
 </manifest>
