--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         <activity android:name=".activity.SelectLanguageActivity"/>
         <activity android:name=".activity.AutoNightTimeActivity"/>
         <activity android:name=".activity.ChangeTextSizeActivity"/>
+        <activity android:name=".activity.GestureLockActivity"
+            android:configChanges="keyboardHidden|keyboard|screenSize|locale|navigation|smallestScreenSize"/>
     </application>
 
 </manifest>
