1.完成更新日志 2.完成接入合作方目录 3.完成检查更新功能

--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         <activity android:name=".activity.ChangeTextSizeActivity"/>
         <activity android:name=".activity.GestureLockActivity"
             android:configChanges="keyboardHidden|keyboard|screenSize|locale|navigation|smallestScreenSize"/>
+        <activity android:name=".activity.AboutActivity"/>
+        <activity android:name=".activity.AppRecordMessageActivity"/>
     </application>
 
 </manifest>
