增加接口模块化间api接口化

--- a/module_mine/build.gradle
+++ b/module_mine/build.gradle
@@ -6,4 +6,5 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(path: ':library_biometric')
+    implementation project(path: ':module_set-api')
 }
