--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:configChanges="keyboardHidden|keyboard|screenSize|locale|navigation|smallestScreenSize"/>
         <activity android:name=".activity.AboutActivity"/>
         <activity android:name=".activity.AppRecordMessageActivity"/>
+        <activity android:name=".activity.PersonalAndManagerActivity"/>
     </application>
 
 </manifest>
