增加个人信息和设备信息界面

--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".activity.AboutActivity"/>
         <activity android:name=".activity.AppRecordMessageActivity"/>
         <activity android:name=".activity.PersonalAndManagerActivity"/>
+        <activity android:name=".activity.PersonalMessageActivity"/>
     </application>
 
 </manifest>
