增加个人信息和设备信息界面,修复部分问题

--- a/module_set/src/main/AndroidManifest.xml
+++ b/module_set/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".activity.AppRecordMessageActivity"/>
         <activity android:name=".activity.PersonalAndManagerActivity"/>
         <activity android:name=".activity.PersonalMessageActivity"/>
+        <activity android:name=".activity.DeviceMessageActivity"/>
     </application>
 
 </manifest>
