--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.google.com' }
+       // maven { url 'https://maven.google.com' }
+        maven {url 'https://dl.google.com/dl/android/maven2/'}
     }
 
     dependencies {
@@ -14,7 +15,7 @@ buildscript {
         classpath ProjectPluginDencies.ARouterRegister
         classpath ProjectPluginDencies.HiltPlugin
         classpath ProjectPluginDencies.AspectJxPlugin
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30'
+     //   classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
 
     }
 }
