每个module新增命名空间

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'android-aspectjx'
 
 
 android {
+    namespace = "com.knight.kotlin.wanandroid"
     compileSdkVersion ProjectBuildDencies.compileSdkVersion
     buildToolsVersion ProjectBuildDencies.buildToolsVersion
 
