--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,7 @@ android.enableJetifier=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+#解决Caused by: com.android.builder.errors.EvalIssueException: API 'android.registerTransform' is removed.
+#apmsInstrumentationEnabled=false
+#在Gradle插件到达8后默认不会生成BuildConfig文件。
+#android.defaults.buildfeatures.buildconfig=true
