--- a/library_common/build.gradle
+++ b/library_common/build.gradle
@@ -6,7 +6,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
-
+    namespace = "com.knight.kotlin.library_common"
 }
 
 dependencies {
