--- a/module_message/build.gradle
+++ b/module_message/build.gradle
@@ -1,4 +1,5 @@
 apply from: '../base_module.gradle'
 android {
     resourcePrefix "message_"
+    namespace = "com.knight.kotlin.module_message"
 }
