--- a/module_set/build.gradle
+++ b/module_set/build.gradle
@@ -1,6 +1,7 @@
 apply from: '../base_module.gradle'
 android {
     resourcePrefix "set_"
+    namespace = "com.knight.kotlin.module_set"
 }
 
 dependencies {
