--- a/module_web/build.gradle
+++ b/module_web/build.gradle
@@ -3,6 +3,7 @@ import com.knight.wanandroid.buildsrc.Dependencies
 apply from: '../base_module.gradle'
 android {
     resourcePrefix "web_"
+    namespace = "com.knight.kotlin.module_web"
 }
 
 dependencies {
