--- a/module_welcome/build.gradle
+++ b/module_welcome/build.gradle
@@ -1,5 +1,6 @@
 apply from: '../base_module.gradle'
 android {
     resourcePrefix "welcome_"
+    namespace = "com.knight.kotlin.module_welcome"
 }
 
