--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ buildscript {
         jcenter()
         mavenCentral()
        // maven { url 'https://maven.google.com' }
-        maven {url 'https://dl.google.com/dl/android/maven2/'}
+        maven {url 'https://dl.google.com/dl/android/maven2/'
+        }
+        maven {url 'https://jitpack.io/'
+        }
     }
 
     dependencies {
