--- a/library_biometric/build.gradle
+++ b/library_biometric/build.gradle
@@ -4,6 +4,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace = "com.knight.library_biometric"
 }
 
 dependencies {
