--- a/library_network/build.gradle
+++ b/library_network/build.gradle
@@ -3,7 +3,7 @@ import com.knight.wanandroid.buildsrc.*
 apply from:'../base_library.gradle'
 
 android {
-
+    namespace = "com.knight.kotlin.library_network"
 }
 
 dependencies {
