--- a/library_util/build.gradle
+++ b/library_util/build.gradle
@@ -5,7 +5,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
-
+    namespace = "com.knight.kotlin.library_util"
 }
 
 dependencies {
