--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -2,6 +2,7 @@ import com.knight.wanandroid.buildsrc.Dependencies
 apply from: '../base_module.gradle'
 android {
     resourcePrefix "main_"
+    namespace = "com.knight.kotlin.module_main"
 }
 
 dependencies {
