1.升级ActivityKtx库到从1.1.0到1.5.1 2.升级FragmentKtx库从1.2.5到1.5.2 3.升级Material库从1.2.0到1.5.0 4.kotlin从1.5.10升级到1.8.10 5.coroutines从1.5.0升级到1.7.0 6.Lifecycle从2.3.1升级到2.5.1 7.Hilt从2.37升级到2.47，Room从2.3.0升级到2.4.3 8.更改底部导航栏 9.更新权限库 10.全面适配Android13

--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -8,4 +8,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation Dependencies.GitHub.bottomNavigate
+    implementation Dependencies.GitHub.bottomNavigateEx
 }
