--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="Instantiatable"
-        >
+        android:theme="@style/base_AppTheme"
+        tools:targetApi="n">
 
         <meta-data
             android:name="android.max_aspect"
