--- a/module_main/src/main/manifest/AndroidManifest.xml
+++ b/module_main/src/main/manifest/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Wanandroid">
+        android:theme="@style/main_Theme.Wanandroid">
 
         <meta-data
             android:name="android.max_aspect"
@@ -35,7 +35,7 @@
 
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:theme="@style/main_Theme.Wanandroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
