--- a/settings.gradle
+++ b/settings.gradle
@@ -20,8 +20,8 @@ include ':library_permiss'
 include ':library_scan'
 include ':module_wechat'
 include ':library_biometric'
-//include ':module_set'
 include ':module_utils'
 include ':module_course'
+//这里注意一下 如果使用模块-api化后，使用includeWithApi 不用 include ':module_set'
 includeWithApi(':module_set')
 include ':module_message'
