1.更新Bugly SDK版本，更改初始化SDK方法，更新隐私政策和用户协议

--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     implementation Dependencies.GitHub.MMKV
     implementation Dependencies.GitHub.Gson
     api Dependencies.GitHub.LoadSir
-    implementation Dependencies.OtherUtils.Bugly
+    api Dependencies.OtherUtils.Bugly
 
 }
