--- a/gradle.properties
+++ b/gradle.properties
@@ -37,4 +37,4 @@ android.useDeprecatedNDK=true
 android.defaults.buildfeatures.buildconfig=true
 # AGP8 开始 R8 默认是 fullMode ，R8 的 fullMode 会自动处理一些常见的混淆规则，但它比普通模式优化更激进
 # 当然，如果你的项目里 keep 规则是完整的，例如反射使用的所有内容都包含在 keep 规则中，那么 fullMode 应该不会引起什么问题，但是，如果你不希望它工作，那么配置 fullMode 为 false 也是可以的
-android.enableR8.fullMode=false
+# android.enableR8.fullMode=false
