--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,5 @@ include ':module_course'
 //这里注意一下 如果使用模块-api化后，使用includeWithApi 不用 include ':module_set'
 includeWithApi(':module_set')
 include ':module_message'
+
+include ':library_crypt'
