新增视频模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -27,5 +27,5 @@ includeWithApi(':module_set')
 include ':module_message'
 
 //include ':library_crypt'
-
 include ':module_aar:aar'
+include ':module_vedio'
