--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,6 +157,7 @@ dependencies {
     implementation project(path:":module_utils")
     implementation project(path:":module_course")
     implementation project(path:":module_message")
+    implementation project(path:":module_vedio")
     implementation Dependencies.JetPack.HiltCore
     kapt Dependencies.JetPack.HiltApt
     kapt Dependencies.JetPack.HiltAndroidx
