基本完成视频播放

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,7 +157,7 @@ dependencies {
     implementation project(path:":module_utils")
     implementation project(path:":module_course")
     implementation project(path:":module_message")
-    implementation project(path:":module_vedio")
+    implementation project(path: ':module_video')
     implementation Dependencies.JetPack.HiltCore
     kapt Dependencies.JetPack.HiltApt
     kapt Dependencies.JetPack.HiltAndroidx
