完善视频播放模块

--- a/module_video/build.gradle
+++ b/module_video/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     implementation Dependencies.Android.ExoPlayerHls
     implementation Dependencies.Android.ExoPlayerRtmp
     implementation Dependencies.Android.ExoPlayerUi
+    implementation Dependencies.OtherUtils.Lottle
 }
