增加视频缓存策略,实现秒开

--- a/module_video/build.gradle
+++ b/module_video/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     implementation Dependencies.Android.ExoPlayerRtmp
     implementation Dependencies.Android.ExoPlayerUi
     implementation Dependencies.OtherUtils.Lottle
+    implementation Dependencies.OtherUtils.slf4j
 }
